# fininja-back

./: .gitignore  addspend.py  aden.py  budget.py  categories_client.py  categories_server.py  category.proto  main.py  pyproject.toml  readme.md  requirements.txt
fininja-app-api/: create.js  delete.js  get.js  list.js  package-lock.json  package.json  serverless.yml  update.js
fininja-app-api/libs/: dynamodb-lib.js  response-lib.js
fininja-app-api/mocks/: create-event.json  delete-event.json  get-event.json  update-event.json
proto_out/: category_pb2.py  category_pb2_grpc.py
tests/: test_main.py
